--- a/metadata.yaml
+++ b/metadata.yaml
@@ -27,5 +27,6 @@ subjects:
 - !lcc 'PS'
 - !lcsh 'Canada -- Fiction'
 - !lcsh 'Riel Rebellion, 1885 -- Fiction'
+- GITenberg
 title: 'Annette, the Metis Spy: A Heroine of the N.W. Rebellion'
 url: http://www.gutenberg.org/ebooks/6668
